2021-04-07    2.3.1:
--------------------
  * bugfixes:
    - #10822 `DataModel` is always serialized
    - #10887 [component: bokehjs] [BUG] FileInput cancel operation throws error
    - #10912 [component: bokehjs] [BUG] 'freehand_draw' is not in name space for tools
    - #10942 [component: examples] [BUG] Spectrogram example does not compile
    - #11000 [component: bokehjs] Make `FuncTickFormatter` always produce strings
    - #11006 [component: bokehjs] [BUG] Log axis exponents react differently when font size is defined in anything but px (e.g. pt)
    - #11026 [component: bokehjs] [BUG] Serialization of MessageSent document event includes all model references
    - #11028 [component: bokehjs] [BUG] Figure events raise errors in the presence of edit tools
    - #11029 [component: bokehjs] [BUG] DataModel warns about being registered multiple times
    - #11054 [component: bokehjs] [BUG] Invalid BBox of BoxSelection
    - #11057 [component: bokehjs] [BUG] Sizing mode example layout broken in docs
    - #11061 [component: bokehjs] [BUG] Tilerenderer snap_back path issue with setv
    - #11062 [component: bokehjs] [Bug] ColorPicker color not updated on selection

  * features:
    - #10569 [FEATURE] JupyterLab 3 dynamic extension loading

  * tasks:
    - #10888 [component: docs] [BUG] FileInput accept-type '.txt' file-extension filtering does not work as expected
    - #10897 [component: docs] Docs: remove reference of outdated 'nbserverproxy' 
    - #10919 [component: docs] [BUG] Deprecate broken HSL objects 
    - #10926 [component: docs] [BUG] BokehJS component default value not passing through
    - #10934 [component: docs] bokeh_releases needs to process files more carefully
    - #10941 Minor cleanup after PR #10939
    - #10943 [component: build] [BUG] Cloudfront invalidation error on full release
    - #10957 [component: build] Update versioneer version?
    - #11002 [component: docs] PolyAnnotation is missing from the user guide