@@ -1,5 +1,6 @@
 {
   "all": [
+    "2.3.2",
     "2.3.1",
     "2.3.0",
     "2.2.3",
@@ -47,13 +48,13 @@
     "0.8.2"
   ],
   "menu": [
-    "2.3.1",
+    "2.3.2",
     "2.2.3",
     "2.2.2",
     "2.1.1",
     "2.0.2",
     "1.4.0"
   ],
-  "latest": "2.3.1",
+  "latest": "2.3.2",
   "obsolete": "0.12.16"
 }
